# Vine-Copula-Risk-Engine

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: demo_quick.yaml  demo_quick_weekly_gas.yaml
data/: public_returns.csv
docs/: claims_ledger.md  model_validation_report.md  pipeline_map.md  validation_notes.md
outputs/demo_quick/: backtest_summary.csv  dm_tests.csv  manifest.json  metrics.json  pinball_losses.csv  scale_sanity.json  tail_risk_attribution.csv  var_es_timeseries.csv  vine_model_card_gas.json  vine_model_card_static.json
outputs/demo_quick_weekly_gas/: backtest_summary.csv  dm_tests.csv  manifest.json  metrics.json  pinball_losses.csv  scale_sanity.json  tail_risk_attribution.csv  var_es_timeseries.csv  vine_model_card_gas.json  vine_model_card_static.json
outputs/sensitivity_quick/: manifest.json  sensitivity_meta.json  sensitivity_summary.csv
scripts/: run_sensitivity.py  run_var_es_backtest.py  validate_manifest.py
tests/: test_backtest_stats.py  test_dm_test.py  test_forbidden_strings.py  test_gas_elliptical_only.py  test_gas_filter_consistency.py  test_gas_tau_mode.py  test_gas_update_every.py  test_gas_update_every_segment_invariance.py  test_gas_vine_oos_dynamic.py  test_integrity.py  test_manifest.py  test_no_oos_leakage_order.py  test_pit_ppf_roundtrip.py  test_plot_labels.py  test_pvc_compat.py  test_reproducibility_contract.py  test_sensitivity.py  test_sigma_refit.py  test_sign_conventions.py  test_tail_risk_attribution.py  test_tail_risk_attribution_timeseries.py  test_vine_model_card.py
(+15 files in other folders)
